--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "ghar.root.recycleAndDrawer"
+        applicationId "ghar.root.weatherTest"
+        //AndroidManifest has package as package="ghar.root.weather_Test.Facial"
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
@@ -21,11 +22,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    externalNativeBuild {
-        cmake {
-            path "CMakeLists.txt"
-        }
-    }
+//    externalNativeBuild {
+//        cmake {
+//            path "CMakeLists.txt"
+//        }
+//    }
 }
 
 dependencies {
@@ -43,6 +44,7 @@ dependencies {
 //    implementation 'com.android.support:support-core-utils:26.1.0'
 //    implementation 'com.android.support:design:26.1.0'
 
+    implementation 'com.github.VyacheslavShmakin:material-raised-button:1.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
