--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "ghar.root.weatherTest"
-        //AndroidManifest has package as package="ghar.root.weather_Test.Facial"
+        //AndroidManifest has package as package="ghar.root.weather_Test.facial"
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 1
@@ -30,19 +30,6 @@ android {
 }
 
 dependencies {
-//    implementation fileTree(include: ['*.jar'], dir: 'libs')
-////    implementation 'com.android.support:appcompat-v7:26.1.0'
-//    implementation 'com.android.support:appcompat-v7:26.1.0'
-//    implementation 'com.android.support:design:27.0.2'
-//    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-//    implementation 'com.android.support:support-v4:26.1.0'
-//    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-//    implementation 'com.android.support:recyclerview-v7:26.1.0'
-//    implementation 'com.android.support:cardview-v7:26.1.0'
-//    implementation 'com.android.support:support-core-utils:26.1.0'
-//    implementation 'com.android.support:design:26.1.0'
 
     implementation 'com.github.VyacheslavShmakin:material-raised-button:1.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
