--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,13 @@ android {
 
 dependencies {
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.VyacheslavShmakin:material-raised-button:1.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+//    implementation 'com.android.support:support-v4:27.1.1'
+
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -36,7 +39,6 @@ dependencies {
 
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:support-core-utils:27.1.1'
     implementation 'com.android.support:design:27.1.1'
 //    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     android {
