--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,19 @@
 apply plugin: 'com.android.application'
 
+
 android {
-    compileSdkVersion 27
+    compileSdkVersion 'android-P'
     defaultConfig {
-        applicationId "mod.redeploy"
+        applicationId "challenge.solstice.myapp"
         minSdkVersion 24
-        targetSdkVersion 26
+//        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        externalNativeBuild {
-            cmake {
-                cppFlags "-fexceptions"
-            }
-        }
+        vectorDrawables.useSupportLibrary = true
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,23 +24,26 @@ android {
 
 dependencies {
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.VyacheslavShmakin:material-raised-button:1.1.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-//    implementation 'com.android.support:support-v4:27.1.1'
-
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation 'com.google.android.gms:play-services:8.4.0'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-//    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+//    implementation 'com.github.VyacheslavShmakin:material-raised-button:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     android {
         useLibrary 'org.apache.http.legacy'
     }
+    api 'com.android.support:design:28.0.0-alpha1'
+    implementation 'com.android.support:support-v4:28.0.0-alpha1'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.google.android.gms:play-services:12.0.1'
+    //    implementation 'com.google.android.gms:play-services:8.4.0'             //worked initial google API's calls
+
+
+        testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:3.0.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
